--- a/CollegeRoadApplication/Views/Member/Index.cshtml
+++ b/CollegeRoadApplication/Views/Member/Index.cshtml
@@ -10,7 +10,6 @@
 <div class="row">
     <div class="col-sm-12">
         @*Name > Action > Controller > Param > Html/bootstrap*@
-        @*@Html.ActionLink("New Member", "New", "Member", null, new { @class = "btn btn-primary" })*@
         @Html.ActionLink("Archived Memebers", "Archive", "Member", null, new { @class = "btn btn-primary" })
 
         <div class="form-inline pull-right">
@@ -27,37 +26,32 @@
 }
 else
 {
-    @*<br />
-        <div id="grdMember"></div>*@
-
-    <table class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Age</th>
-            </tr>
-        </thead>
-        <tbody>
-            @if (Model.Count() != 0)
-            {
-                foreach (var member in Model)
-                {
-                    if (member.IsArchived == false)
-                    {
-                        <tr>
-                            @*Name > Action > Controller > Param *@
-                            <td>@Html.ActionLink(member.Name, "Edit", "Member", new { id = member.Name }, null)</td>
-                            <td>@Html.DisplayTextFor(m => member.Age)</td>
-                        </tr>
-                    }
-
-                }
-            }
-            else
-            {
-                <tr><td colspan="3" class="text-center">No Results Found</td></tr>
-            }
-
-        </tbody>
-    </table>
+    <br />
+    <div id="grdMember"></div>
 }
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(() => {
+        getMemebers();
+
+        $('#txtSearch').on('keyup', () => {
+            getMemebers();
+        });
+    });
+
+    function getMemebers() {
+        $.ajax({
+            url: '@Url.Action("SearchMembers", "Member")',
+            datatype: 'html',
+            method: 'GET',
+            data: { searchText: $('#txtSearch').val() },
+            success: function (res) {
+                $('#grdMember').html('').html(res);
+            },
+            error: function (err) {
+                console.log(err);
+            }
+        })
+    }
+</script>
