Swimming Meet Func Completed > New, Save, Edit and Filter

--- a/CollegeRoadApplication/Views/Shared/_Layout.cshtml
+++ b/CollegeRoadApplication/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Member", "Index", "Member")</li>
+                    <li>@Html.ActionLink("Swimming Meets", "Index", "SwimmingMeet")</li>
+                    <li>@Html.ActionLink("Members", "Index", "Member")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
