Lane Func completed > New, Save, Edit - Displays user name on lane display

--- a/CollegeRoadApplication/Views/SwimmingEvent/SwimmingEventForm.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingEvent/SwimmingEventForm.cshtml
@@ -49,24 +49,30 @@
     </p>
     if (Model.SwimmingEvent.Lanes != null)
     {
-        <table class="table table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>Member</th>
-                    <th>Results</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var lane in Model.SwimmingEvent.Lanes)
-                {
-                    <tr>
-                        <td>@Html.ActionLink(lane.ApplicationUser.Name, "Edit", "Lane", new { id = lane.Id }, new { @class = "btn btn-primary" })</td>
-                        <td>@lane.Result</td>
-                    </tr>
+<table class="table table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>Lane</th>
+            <th>Swimmer Name</th>
+            <th>Results</th>
+        </tr>
+    </thead>
+    <tbody>
+        @{
+            int count = 1;
 
-                }
-            </tbody>
-        </table>
+            foreach (var lane in Model.SwimmingEvent.Lanes)
+            {
+                <tr>
+                    <td>@count</td>
+                    <td>@Html.ActionLink(lane.ApplicationUser.Name, "Edit", "Lane", new { id = lane.Id })</td>
+                    <td>@lane.Result</td>
+                </tr>
+                count = count + 1;
+            }
+        }
+    </tbody>
+</table>
     }
 
 
