--- a/CollegeRoadApplication/Views/Shared/_NavBar.cshtml
+++ b/CollegeRoadApplication/Views/Shared/_NavBar.cshtml
@@ -14,6 +14,7 @@
                 <li>@Html.ActionLink("Swimming Meets", "Index", "SwimmingMeet")</li>
                 <li>@Html.ActionLink("Swimming Events", "Index", "SwimmingEvent")</li>
                 <li>@Html.ActionLink("Members", "Index", "Member")</li>
+                <li>@Html.ActionLink("Family Group", "Index", "FamilyGroups")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
             @Html.Partial("_LoginPartial")
