--- a/CollegeRoadApplication/Views/SwimmingEvent/_EventFilterGrid.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingEvent/_EventFilterGrid.cshtml
@@ -10,14 +10,22 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var race in Model)
+        @if (Model.Count() != 0)
         {
-            <tr>
-                <td>@Html.ActionLink(race.Name, "Edit", "SwimmingEvent", new { id = race.Id }, null)</td>
-                <td>@race.AgeRange</td>
-                <td>@race.Distance</td>
-                <td>@race.Gender</td>
-            </tr>
+            foreach (var race in Model)
+            {
+                <tr>
+                    <td>@Html.ActionLink(race.Name, "Edit", "SwimmingEvent", new { id = race.Id }, null)</td>
+                    <td>@race.AgeRange</td>
+                    <td>@race.Distance</td>
+                    <td>@race.Gender</td>
+                </tr>
+            }
         }
+        else
+        {
+            <tr><td colspan="4" class="text-center">No Results Found</td></tr>
+        }
+
     </tbody>
 </table>
