--- a/CollegeRoadApplication/Views/Member/_MemberFilterGrid.cshtml
+++ b/CollegeRoadApplication/Views/Member/_MemberFilterGrid.cshtml
@@ -16,7 +16,7 @@
                 {
                     <tr>
                         @*Name > Action > Controller > Param *@
-                        <td>@Html.ActionLink(member.Name, "Edit", "Member", new { id = member.Name }, null)</td>
+                        <td>@Html.ActionLink(member.Name, "Edit", "Member", new { id = member.Id }, null)</td>
                         <td>@Html.DisplayTextFor(m => member.Age)</td>
                     </tr>
                 }
