--- a/CollegeRoadApplication/Views/Member/Archive.cshtml
+++ b/CollegeRoadApplication/Views/Member/Archive.cshtml
@@ -24,7 +24,7 @@ else
             {
                 <tr>
                     @*Name > Action > Controller > Param *@
-                    <td>@Html.ActionLink(member.Name, "Edit", "Member", new { id = member.Name }, null)</td>
+                    <td>@Html.ActionLink(member.Name, "Edit", "Member", new { id = member.Id }, null)</td>
                 </tr>
             }
         </tbody>
