--- a/CollegeRoadApplication/Views/Shared/_Layout.cshtml
+++ b/CollegeRoadApplication/Views/Shared/_Layout.cshtml
@@ -9,7 +9,16 @@
 
 </head>
 <body>
-    @Html.Partial("_NavBar")
+    @if (!User.Identity.IsAuthenticated)
+    {
+        @Html.Partial("_NavBarGuest")
+    }
+
+    @if (this.User.IsInRole("Admin") || this.User.IsInRole("SCO"))
+    {
+        @Html.Partial("_NavBar")
+    }
+
     <div class="container body-content">
         @RenderBody()
         <hr />
