--- a/CollegeRoadApplication/Views/SwimmingEvent/_EventFilterGrid.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingEvent/_EventFilterGrid.cshtml
@@ -2,7 +2,7 @@
 
 <table class="table table-bordered table-hover">
     <thead>
-        <tr>
+        <tr class="bg-info">
             <th>@Html.DisplayNameFor(m => m.Name)</th>
             <th>@Html.DisplayNameFor(m => m.Distance)</th>
             <th>@Html.DisplayNameFor(m => m.Stroke)</th>
