--- a/CollegeRoadApplication/Views/Shared/_NavBarGuest.cshtml
+++ b/CollegeRoadApplication/Views/Shared/_NavBarGuest.cshtml
@@ -6,11 +6,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("College Road SC", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("Swimming Meets", "Index", "SwimmingMeet")</li>
                 <li>@Html.ActionLink("Swimming Events", "Index", "SwimmingEvent")</li>
             </ul>
