--- a/CollegeRoadApplication/Views/SwimmingMeet/_MeetFilterGrid.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingMeet/_MeetFilterGrid.cshtml
@@ -2,7 +2,7 @@
 
 <table class="table table-bordered table-hover">
     <thead>
-        <tr>
+        <tr class="bg-info">
             <th>Meet</th>
             <th>Date</th>
             <th>Events</th>
