--- a/CollegeRoadApplication/Views/SwimmingMeet/Delete.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingMeet/Delete.cshtml
@@ -4,20 +4,32 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 class="text-danger">Delete</h2>
 
-<h3>Are you sure you what to delete this swimming meet? </h3>
+<h3 class="text-danger">Are you sure you what to delete this swimming meet? </h3>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <ul>
-        <li>@Html.DisplayNameFor(m => m.Name) : @Html.DisplayFor(m => m.Name)</li>
+        <li style="font-size: 20px">@Html.DisplayNameFor(m => m.Name) : @Html.DisplayFor(m => m.Name)</li>
     </ul>
 
     <div class="form-actions no-color">
+        <br />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         @Html.ActionLink("Back to List", "Index")
     </div>
 }
+
+<style>
+    .btn:hover {
+        background-color: indianred;
+        color: white
+    }
+
+    .no-color {
+        font-size: medium
+    }
+</style>
