--- a/CollegeRoadApplication/Views/SwimmingMeet/SwimmingMeetForm.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingMeet/SwimmingMeetForm.cshtml
@@ -4,10 +4,11 @@
     ViewBag.Title = "SwimmingMeetForm";
 }
 
-<h2>@Model.Title Meeting details</h2>
+<h2>@Model.Title Swimming Meeting</h2>
 
 @using (Html.BeginForm("Save", "SwimmingMeet"))
 {
+    <hr />
     <div class="form-group">
         @Html.LabelFor(m => m.SwimmingMeet.Name)
         @Html.TextBoxFor(m => m.SwimmingMeet.Name, new { @class = "form-control" })
@@ -33,3 +34,10 @@
     <button type="submit" class="btn btn-primary">Save</button>
 
 }
+
+<style>
+    .btn:hover {
+        background-color: darkgreen;
+        color: white
+    }
+</style>
