--- a/CollegeRoadApplication/Views/SwimmingMeet/_MeetFilterGrid.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingMeet/_MeetFilterGrid.cshtml
@@ -3,10 +3,10 @@
 <table class="table table-bordered table-hover">
     <thead>
         <tr class="bg-info">
-            <th>Meet</th>
-            <th>Date</th>
+            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Date)</th>
             <th>Events</th>
-            <th>Venue</th>
+            <th>@Html.DisplayNameFor(model => model.Vanue)</th>
             <th></th>
         </tr>
     </thead>
