--- a/CollegeRoadApplication/Views/Member/_SwimmerFilterGrid.cshtml
+++ b/CollegeRoadApplication/Views/Member/_SwimmerFilterGrid.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CollegeRoadApplication.Models.ApplicationUser>
 
 <table class="table table-bordered table-hover">
-    <thead>
+    <thead class="bg-info">
         <tr>
             <th>Name</th>
             <th>Age</th>
