--- a/CollegeRoadApplication/Views/SwimmingMeet/Index.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingMeet/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="form-inline pull-right">
             <label>Search</label>
             <input type="text" class="form-control" id="txtSearch" placeholder="By Venue" />
-            <input type="text" class="form-control" id="txtSearchDate" placeholder="By year" />
+            <input type="text" class="form-control" id="txtSearchDate" placeholder="By date" />
             <br />
         </div>
     </div>
