--- a/CollegeRoadApplication/Views/Member/MemberForm.cshtml
+++ b/CollegeRoadApplication/Views/Member/MemberForm.cshtml
@@ -42,15 +42,19 @@
     {
         <div class="form-group">
             @Html.LabelFor(c => c.ApplicationUser.FamilyGroupId)
-            @Html.DropDownListFor(c => c.ApplicationUser.FamilyGroupId, new SelectList(Model.FamilyGroups, "Id", "Name"), new { @class = "form-control" })
+            @Html.DropDownListFor(c => c.ApplicationUser.FamilyGroupId, new SelectList(Model.FamilyGroups, "Id", "Name"), "Family Group", new { @class = "form-control" })
         </div>
     }
 
-    <div class="checkbox">
-        <label>
-            @Html.CheckBoxFor(c => c.ApplicationUser.isAllowedToSwim) Premission to Swim
-        </label>
-    </div>
+    if (User.IsInRole("Admin") || User.IsInRole("SCO"))
+    {
+        <div class="checkbox">
+            <label>
+                @Html.CheckBoxFor(c => c.ApplicationUser.isAllowedToSwim) Premission to Swim
+            </label>
+        </div>
+    }
+
     if (User.IsInRole("Admin") || User.IsInRole("SCO"))
     {
         <div class="checkbox">
