--- a/CollegeRoadApplication/Views/Member/_MemberFilterGrid.cshtml
+++ b/CollegeRoadApplication/Views/Member/_MemberFilterGrid.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CollegeRoadApplication.Models.ApplicationUser>
 
 <table class="table table-bordered table-hover">
-    <thead>
+    <thead class="bg-info">
         <tr>
             <th>@Html.DisplayNameFor(m => m.Name)</th>
             <th>@Html.DisplayNameFor(m => m.Age)</th>
