--- a/CollegeRoadApplication/Views/SwimmingEvent/_EventFilterGrid.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingEvent/_EventFilterGrid.cshtml
@@ -3,12 +3,13 @@
 <table class="table table-bordered table-hover">
     <thead>
         <tr class="bg-info">
+            <th>@Html.DisplayNameFor(m => m.SwimmingMeet.Name)</th>
             <th>@Html.DisplayNameFor(m => m.Name)</th>
             <th>@Html.DisplayNameFor(m => m.Distance)</th>
             <th>@Html.DisplayNameFor(m => m.Stroke)</th>
             <th>@Html.DisplayNameFor(m => m.AgeRange)</th>
             <th>@Html.DisplayNameFor(m => m.Gender)</th>
-            <td></td>
+            @if (User.IsInRole("Admin") || User.IsInRole("SCO")) {<td></td>}
         </tr>
     </thead>
     <tbody>
@@ -17,12 +18,15 @@
             foreach (var race in Model)
             {
         <tr>
+            <td>@race.SwimmingMeet.Name</td>
             <td>@Html.ActionLink(race.Name, "Edit", "SwimmingEvent", new { id = race.Id }, null)</td>
             <td>@race.Distance</td>
             <td>@race.Stroke</td>
             <td>@race.AgeRange</td>
             <td>@race.Gender</td>
-            <td>@Html.ActionLink("Delete", "Delete", "SwimmingEvent", new { id = race.Id }, null)</td>
+            @if (User.IsInRole("Admin") || User.IsInRole("SCO")) { <td>@Html.ActionLink("Delete", "Delete", "SwimmingEvent", new { id = race.Id }, null)</td>}
+
+            
         </tr>
             }
         }
