--- a/CollegeRoadApplication/Views/SwimmingMeet/SwimmingMeetForm.cshtml
+++ b/CollegeRoadApplication/Views/SwimmingMeet/SwimmingMeetForm.cshtml
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.SwimmingMeet.Date)
-        @Html.TextBoxFor(m => m.SwimmingMeet.Date, "{0: dd/MM/yyyy}", new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.SwimmingMeet.Date, "{0: dd/MM/yyyy}", new { @class = "form-control", @placeholder = "dd/MM/yyyy" })
         @Html.ValidationMessageFor(m => m.SwimmingMeet.Date)
     </div>
     <div class="form-group">
